# sqlx_gen

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
crates/sqlx_gen/: Cargo.toml
crates/sqlx_gen/src/: cli.rs  lib.rs  main.rs  writer.rs
crates/sqlx_gen/src/codegen/: composite_gen.rs  crud_gen.rs  domain_gen.rs  entity_parser.rs  enum_gen.rs  mod.rs  struct_gen.rs
crates/sqlx_gen/src/introspect/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
crates/sqlx_gen/src/typemap/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
crates/sqlx_gen/tests/: e2e_sqlite.rs  introspect_sqlite.rs
crates/sqlx_gen_macros/: Cargo.toml
sqlx_gen_macros/src/: lib.rs
src/: cli.rs  error.rs  lib.rs  main.rs  writer.rs
src/codegen/: composite_gen.rs  crud_gen.rs  domain_gen.rs  entity_parser.rs  enum_gen.rs  mod.rs  struct_gen.rs
src/introspect/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/typemap/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
tests/: e2e_sqlite.rs  introspect_sqlite.rs
