[package]
name = "sqlx-gen"
version = "0.1.0"
edition = "2021"
description = "Generate Rust structs from database schema introspection"

[dependencies]
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "mysql",
    "sqlite",
    "chrono",
    "uuid",
    "json",
] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
heck = "0.5"
anyhow = "1"
quote = "1"
proc-macro2 = "1"
syn = "2"
prettyplease = "0.2"
