[package]
name = "sqlx-gen"
version = "0.4.9"
edition = "2021"
description = "Generate Rust structs from database schema introspection"
license = "MIT"
repository = "https://github.com/LeadcodeDev/sqlx-gen"
readme = "../../README.md"
keywords = ["sqlx", "codegen", "postgres", "mysql", "sqlite"]
categories = ["database", "development-tools"]

[[bin]]
name = "sqlx-gen"
required-features = ["cli"]

[features]
default = ["cli"]
cli = [
    "dep:sqlx",
    "dep:tokio",
    "dep:clap",
    "dep:heck",
    "dep:thiserror",
    "dep:quote",
    "dep:proc-macro2",
    "dep:syn",
    "dep:prettyplease",
    "dep:log",
    "dep:env_logger",
]

[dependencies]
sqlx-gen-macros = { path = "../sqlx_gen_macros", version = "0.4.0" }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "mysql",
    "sqlite",
    "chrono",
    "uuid",
    "json",
], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
clap = { version = "4", features = ["derive", "env"], optional = true }
heck = { version = "0.5", optional = true }
thiserror = { version = "2", optional = true }
quote = { version = "1", optional = true }
proc-macro2 = { version = "1", optional = true }
syn = { version = "2", optional = true }
prettyplease = { version = "0.2", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
